<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/bg_default">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_xl">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activation_title"
            android:textAppearance="@style/TextAppearance.Aish.PageTitle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:layout_marginBottom="@dimen/space_xl"
            android:text="@string/activation_helper"
            android:textAppearance="@style/TextAppearance.Aish.Body" />

        <EditText
            android:id="@+id/inputCode"
            style="@style/Widget.Aish.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/input_height"
            android:hint="@string/activation_code_hint"
            android:contentDescription="@string/cd_activation_code"
            android:inputType="textVisiblePassword"
            android:imeOptions="actionDone"
            android:maxLines="1" />

        <TextView
            android:id="@+id/textError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:textColor="@color/action_destructive"
            android:textAppearance="@style/TextAppearance.Aish.Body"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonActivate"
            style="@style/Widget.Aish.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg_plus"
            android:minHeight="@dimen/touch_target_min"
            android:text="@string/activation_button" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_lg"
            android:visibility="gone" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
