<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/bg_default">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="@dimen/space_xl">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/revoked_title"
            android:textAppearance="@style/TextAppearance.Aish.PageTitle" />

        <TextView
            android:id="@+id/textReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:text="@string/revoked_generic"
            android:textAppearance="@style/TextAppearance.Aish.Body" />

        <LinearLayout
            android:id="@+id/rowDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/space_lg"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/revoked_device_label"
                android:textAppearance="@style/TextAppearance.Aish.Label" />

            <TextView
                android:id="@+id/textDeviceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Aish.Body" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowOutlet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/space_md"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/revoked_outlet_label"
                android:textAppearance="@style/TextAppearance.Aish.Label" />

            <TextView
                android:id="@+id/textOutletName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Aish.Body" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:text="@string/revoked_note"
            android:textAppearance="@style/TextAppearance.Aish.Caption" />

        <Button
            android:id="@+id/buttonClose"
            style="@style/Widget.Aish.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xl"
            android:minHeight="@dimen/touch_target_min"
            android:text="@string/revoked_close" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
