<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="@dimen/space_xl">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Aish.PageTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/space_xl"
            android:text="@string/login_subtitle"
            android:textAppearance="@style/TextAppearance.Aish.Body" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/input_height"
            android:hint="@string/login_email_hint"
            android:contentDescription="@string/cd_login_email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:minHeight="@dimen/input_height"
            android:hint="@string/login_password_hint"
            android:contentDescription="@string/cd_login_password"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <TextView
            android:id="@+id/textError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:textColor="@color/action_destructive"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonLogin"
            style="@style/Widget.Aish.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg_plus"
            android:minHeight="@dimen/touch_target_min"
            android:text="@string/login_button" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_lg"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>
